--- a/estilos/pag-home.css
+++ b/estilos/pag-home.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
 
+
+
 body {
     background-image: url('../imagens/tela-home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
-
-
 
