--- a/estilos/pag-principal.css
+++ b/estilos/pag-principal.css
@@ -16,7 +16,7 @@ main {
     height: 97vh;
 }
 
-section {
+section#telefone {
     background-image: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
     background-position: bottom center;
@@ -42,15 +42,23 @@ section > iframe {
     height: 475px;
 }
 
-
-
-iframe {
-    width: 100%;
-    height: 100%;
+#navbar {
+    text-align: right;
 }
 
+#navbar > a > img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.425);
+    box-sizing: border-box;
+}
 
-
-
+#navbar  img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.637);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .3s, border 1s;
+} 
 
 
