--- a/estilos/pag-sociais.css
+++ b/estilos/pag-sociais.css
@@ -7,6 +7,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
 img {
     width: 100%;
 }
